# contract-graph

./: .detect-secrets.cfg  .gitignore  .importlinter  .markdownlint-cli2.jsonc  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  _typos.toml  codecov.yml  contract-graph.example.yaml  contract_graph.output.schema.json  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  false_positive.md  feature_request.md
.github/workflows/: README.md  ci.yml  dependency-review.yml  install-smoke.yml  release.yml  test.yml
contract_graph/: cli.py  config.py  utils.py
contract_graph/cache/: file_cache.py
contract_graph/discovery/: __init__.py  api_type_sync.py  base.py
contract_graph/graph/: impact.py  model.py
contract_graph/parsing/: python_parser.py  typescript_parser.py
contract_graph/policy/: engine.py  rules.py
contract_graph/reporting/: json_report.py  markdown_report.py  terminal_report.py
contract_graph/scoring/: __init__.py  scorer.py
docs/: CONTEXT_MAP_professionalization.md  MAINTAINER_RUNBOOK.md  REPOSITORY_GOVERNANCE.md  drift-integration.md
drift-contract-graph/: README.md  pyproject.toml
drift-contract-graph/src/drift_contract_graph/: __init__.py  adapter.py  commands.py  mapping.py
drift-contract-graph/tests/: test_adapter.py  test_mapping.py
drift-contract-graph/tests/evals/: cases.jsonl  eval_runner.py
drift-contract-graph/tests/evals/results/: baseline.json
scripts/: drift_pre_push.py
src/contract_graph/: __init__.py  cli.py  output_schema.json
src/contract_graph/discovery/: __init__.py  api_type_sync.py  base.py  config_usage.py  route_activation.py
src/contract_graph/graph/: __init__.py  builder.py  impact.py  model.py
src/contract_graph/parsing/: python_parser.py  typescript_parser.py  yaml_parser.py
src/contract_graph/policy/: __init__.py  rules.py
src/contract_graph/reporting/: __init__.py  json_report.py  markdown_report.py  terminal_report.py
src/contract_graph/scoring/: scorer.py
tests/: conftest.py  test_api_type_sync.py  test_cli.py  test_config_usage.py  test_graph_model.py  test_parsers.py  test_policy_engine.py  test_regression_demo.py  test_route_activation.py  test_schema_validation.py  test_typescript_parser_advanced.py
tests/fixtures/fullstack_basic/: contract-graph.yaml
tests/fixtures/fullstack_basic/backend/: models.py  routes.py
tests/fixtures/fullstack_basic/config/: config.yaml
tests/fixtures/fullstack_basic/frontend/: types.ts
tests/fixtures/regression_demo/backend/: models.py  routes.py
tests/fixtures/regression_demo/frontend/: types.ts
