[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contract_graph"]

[project]
name = "contract-graph"
version = "0.1.0"
description = "Cross-boundary contract intelligence for heterogeneous codebases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "sauremilk" }]
keywords = ["contracts", "type-sync", "static-analysis", "cross-boundary", "pydantic", "typescript"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
typescript = ["tree-sitter>=0.22", "tree-sitter-typescript>=0.22"]
sarif = ["sarif-om>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "ruff>=0.4",
    "mypy>=1.10",
    "vulture>=2.11",
    "python-semantic-release>=9.0",
    "jsonschema>=4.0",
]
all = ["contract-graph[typescript,sarif,dev]"]

[project.scripts]
contract-graph = "contract_graph.cli:main"

[project.urls]
Homepage = "https://github.com/sauremilk/contract-graph"
Repository = "https://github.com/sauremilk/contract-graph"
Issues = "https://github.com/sauremilk/contract-graph/issues"
Discussions = "https://github.com/sauremilk/contract-graph/discussions"
Documentation = "https://github.com/sauremilk/contract-graph#readme"
Changelog = "https://github.com/sauremilk/contract-graph/blob/master/CHANGELOG.md"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["RUF100"]
"tests/test_api_type_sync.py" = ["RUF059"]
"tests/test_policy_engine.py" = ["RUF059"]
"tests/test_regression_demo.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
check_untyped_defs = true
exclude = ["tests/fixtures/"]

[[tool.mypy.overrides]]
module = ["yaml", "networkx"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["contract_graph"]
branch = true
parallel = true

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 60

[tool.vulture]
min_confidence = 80
paths = ["src/contract_graph", "tests"]
exclude = ["tests/fixtures/"]

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/contract_graph/__init__.py:__version__"]
build_command = "uv build"
commit_message = "chore(release): {version}"
changelog_file = "CHANGELOG.md"
upload_to_pypi = false
upload_to_release = true
